@@ -59,6 +59,7 @@
          <LI><A HREF="25_algorithms/howto.html">Chapter 25 (Algorithms)</A>
          <LI><A HREF="26_numerics/howto.html">Chapter 26 (Numerics)</A>
          <LI><A HREF="27_io/howto.html">Chapter 27 (I/O)</A>
+         <LI><A HREF="ext/howto.html">Extensions to the Standard Library</A>
       </OL>
 
 
