@@ -13,7 +13,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.4 2000/06/28 18:57:27 pme Exp $ -->
+<!-- $Id: index.html,v 1.5 2000/07/11 21:45:08 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -163,9 +163,14 @@ HREF="ftp://sources.redhat.com/pub/libstdc++/libstdc++-2.90.8.tar.gz">
 
 <HR>
    <H2><A NAME="1_5">1.5 When is libstdc++ going to be finished?</A></H2>
-      <P>Nathan Myers gave the best of all possible answers in <A 
+<!--      <P>Nathan Myers gave the best of all possible answers in <A 
          HREF="http://www.deja.com/getdoc.xp?AN=469581698&fmt=text">a 
          Usenet article</A>.</P>
+which is no longer available, thanks deja...-->
+      <P>Nathan Myers gave the best of all possible answers in a
+         Usenet article asking this question:  Sooner, if you help.
+      </P>
+
 
 <HR>
    <H2><A NAME="1_6">1.6 How do I contribute to the effort?</A></H2>
@@ -530,7 +535,10 @@ to the list</A>, Nathan Myers announced that he has started a list of
       <P>The ISO Committee will meet periodically to review Defect Reports
          in the C++ Standard.  Undoubtably some of these will result in
          changes to the Standard, which will be reflected in patches to
-         libstdc++.  Some of that is already happening, see 4.2.
+         libstdc++.  Some of that is already happening, see 4.2.  Some of
+         those changes are being predicted by the library maintainers, and
+         we add code to the library based on what the current proposed
+         resolution specifies.
       </P>
       <P>The current libstdc++ contains extensions to the Library which
          must be explicitly requested by client code (for example, the
@@ -573,6 +581,9 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
          <PRE>
        #include &lt;ext/hash_map&gt;
          </PRE>
+      </P>
+      <P>Extensions to the library have
+         <A HREF="../ext/howto.html">their own page</A>.
       </P>
 
 <HR>
@@ -643,7 +654,7 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@egcs.cygnus.com">Gabriel Dos Reis</A>.
-<BR> $Id: index.html,v 1.4 2000/06/28 18:57:27 pme Exp $
+<BR> $Id: index.html,v 1.5 2000/07/11 21:45:08 pme Exp $
 </EM></P>
 
 
